# practice

./: CMakeLists.txt  DCTCompression.cpp  DCTCompression.h  DCTCompression.hpp  FractalCompression.cpp  FractalCompression.hpp  Huffman.cpp  Huffman.h  Huffman.hpp  LZWCompressor.cpp  LZWCompressor.hpp  RLECompressor.cpp  RLECompressor.h  RLECompressor.hpp  main.cpp
